Refactors sync service to a reactive architecture
Migrates the sync service to a reactive architecture using Reactor.

Improves extensibility and reduces code duplication by
centralizing orchestration and adopting a hexagonal architecture.

Enables adding new platforms via dedicated modules and provides
a composite notification system for flexible channel fan-out.